--- a/pom.xml
+++ b/pom.xml
@@ -156,6 +156,12 @@
             <artifactId>geoip2</artifactId>
             <version>2.16.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.cloud</groupId>
+            <artifactId>google-cloud-storage</artifactId>
+            <version>0.4.0</version>
+        </dependency>
+
 
     </dependencies>
 
